--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">WiproDemoApp</string>
     <string name="post_title">Title of the Post</string>
     <string name="post_body_text">body of the post</string>
+
+    <string name="no_description">(no description available)</string>
+    <string name="no_title">(no title available)</string>
 </resources>
