Everything is done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
 
     <string name="no_description">(no description available)</string>
     <string name="no_title">(no title available)</string>
+    <string name="no_connectivity">Make sure you have an active data connection</string>
 </resources>
